tests/isa/x86/expression_fixups/negative/symbolic_sub_byte_immediate.asm
origin(0)
x86.use64()

entry:
    ccmpl target, rdx, r30
target:
    ret
